# pdcurses-testing

./: .gitmodules  CMakeLists.txt  main.cpp  main.cxx
lib/: CMakeLists.txt  pdcurses.cmake
lib/cmake/: gtest_register.cmake
test/: CMakeLists.txt  links.cxx
